@startuml
'https://plantuml.com/class-diagram

class Human {
  +val position: Position
  __
  +fun catch(rabbit: Rabbit)
  +fun leftMove(position: Position): Human
  +fun rightMove(position: Position): Human
}

class Rabbit {
  +val position: Position
  __
  +fun fun move(createPositionPolicy: CreatePositionPolicy, createDirectionPolicy: CreateDirectionPolicy): Rabbit
  +fun isSamePosition(position: Position)
}

class Position {
  +val value: Int
  __
  +operator fun plus(position: Position)
  +operator fun minus(position: Position)
  {static} +fun random(): Position
}

enum Direction {
  +LEFT
  +RIGHT
  __
  {static} +fun random(): Direction
  {static} +fun ofValue(value: String): Direction
}
interface CreatePositionPolicy {
  +fun position(): Position
}

class CreateRandomPositionPolicy {
  +override fun position(): Position
}

interface CreateDirectionPolicy {
  +fun direction(): Direction
}

class CreateRandomDirectionPolicy {
  +override fun direction(): Direction
}

CreatePositionPolicy <|-- CreateRandomPositionPolicy
CreateDirectionPolicy <|-- CreateRandomDirectionPolicy
Position <-- Human
Position <-- Rabbit
Human -> Rabbit
Rabbit -> Direction
Rabbit --> CreatePositionPolicy
Rabbit --> CreateDirectionPolicy

@enduml
